...
                android:text="@string/nav_khata"
                android:textColor="@color/bottom_nav_item_tint"
                android:textSize="@dimen/text_size_caption" />
        </LinearLayout>

        <LinearLayout
            android:id="@+id/navRecordItem"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginHorizontal="4dp"
            android:layout_weight="1"
            android:clickable="true"
            android:contentDescription="@string/nav_record"
...
